# CAPEView

./: .gitignore  .pre-commit-config.yaml  CAPEView.spec  CAPEView_setup.iss  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
CAPEView/: __init__.py  __main__.py  animated_splash.py  auth.py  auto_update.py  cape_database.py  cape_view.py  claims_csv_ingest.py  email_digest.py  export_view.py  outlook_drop.py  settings_dialog.py  settings_manager.py  theme.py  version.py  workbook_export.py
CAPEView/views/: admin_dialog.py  dashboard.py  reports.py  table_view.py
scripts/: cleanup_excel_quoted_keys.py  copy_db.py  generate_it_summary.py  generate_management_overview.py  generate_user_quickstart.py  make_icon.py  migrate_workbook.py  refresh_seed_db.ps1  xlsx_audit.py
tests/: conftest.py  test_auth.py  test_auto_update.py  test_claims_csv_ingest.py  test_claims_editing.py  test_database.py  test_email_digest.py  test_export_view.py  test_format_cell.py  test_outlook_drop.py  test_pivot_queries.py  test_settings.py
