[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capeview"
version = "0.0.1"
description = "CAPE Phase-1 entry tracking and compliance application"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Process Logic Labs, LLC", email = "admin@processlogiclabs.com" },
]
dependencies = [
    "PyQt5>=5.15.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "requests>=2.28.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
include = ["CAPEView*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
